--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/react": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
